Fix contact section overflow on mobile.

--- a/style.css
+++ b/style.css
@@ -286,11 +286,7 @@ footer a :hover {
     .about {
         height: 100vh;
     }
-
-    .contact {
-        width: 110vw;
-    }
-    .contact h2 {
+    h2 {
         font-size: 1.5rem;
     }
     .contact-form {
